<resources>
    <string name="app_name">Metro Explorer</string>
    <string name="use_closest_station">Use Closest Station</string>
    <string name="favorites">Favorites</string>
    <string name="select_station">Select Station</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="distance">Distance</string>
    <string name="view_on">View on</string>
    <string name="distance_feet">%1$s miles from %2$s station</string>
    <string name="yelp"><u>Yelp</u></string>
    <string name="noLocation">Location can\'t be determined.</string>
    <string name="noPermission">Location services not turned on.
        Go to Settings -> Security&amp;Location -> Location -> App-level permissions.</string>
    <string name="noYelp">Landmarks can\'t be loaded from Yelp. Check your internet connection.</string>
    <string name="noMaps">Can\'t access Google Maps.</string>
</resources>
