<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.Toolbar
        android:id="@+id/landmarkdetail_toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme= "@style/AppTheme.ActionBarTheme"/>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context="com.coursegnome.metroexplorer.activity.MetroStationsActivity">

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_below="@+id/landmarkdetail_toolbar"
                android:scaleType="centerCrop"
                android:src="@drawable/placeholder"/>

            <TextView
                android:id="@+id/landmarkName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/image"
                android:paddingBottom="10dp"
                android:paddingEnd="10dp"
                android:paddingStart="15dp"
                android:paddingTop="7dp"
                android:text="Lincoln Memorial"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/white"
                android:textSize="26sp" />

            <LinearLayout
                android:id="@+id/firstlinearlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@id/image"
                android:paddingStart="15dp"
                android:paddingEnd="15dp">

                <TextView
                    android:id="@+id/addressLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/address"
                    android:paddingTop="10dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

                <TextView
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="2122 Massachusetts Ave\nWashington, D.C.\n20008"
                    android:paddingTop="3dp"
                    android:clickable="true"
                    android:focusable="true"/>

                <TextView
                    android:id="@+id/phoneLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/phone"
                    android:paddingTop="10dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

                <TextView
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="617-800-7258"
                    android:paddingTop="3dp"/>

                <TextView
                    android:id="@+id/distanceLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/distance"
                    android:paddingTop="10dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

                <TextView
                    android:id="@+id/distance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/distance_feet"
                    android:paddingTop="3dp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/yelp_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/firstlinearlayout"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:paddingBottom="15dp"
                android:paddingTop="20dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true">

                <TextView
                    android:id="@+id/viewOn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/view_on"/>

                <TextView
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:id="@+id/yelp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#D32323"
                    android:text="@string/yelp"/>

            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</LinearLayout>